--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.14.2",
     "multer": "^2.0.0",
     "multer-s3": "^3.0.1",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "socket.io": "^4.8.1"
